# pyperformance

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  AUTHORS  BENCHMARKS_FORMAT.md  MANIFEST.in  README.rst  TODO.rst  azure-pipelines.yml  bench.py  benchmarks  dev.py  pyperformance  pyproject.toml  requirements.in  requirements.txt  runtests.py  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml  main.yml  mypy.yml  pre-commit.yml  publish.yml  ruff.yml
benchmark/: benchmarks.py  cli.py  compare.py  run.py  venv.py
doc/: benchmark.conf  benchmark.conf.sample  benchmarks.rst  changelog.rst  conf.py  cpython_results_2017.rst  custom_benchmarks.rst  index.rst  make.bat  usage.rst
examples/benchmarking-scripts/: README.md  backfill.py  backfill_shas.txt  benchmark.conf.in  run-pyperformance.sh
performance/: README  __init__.py  __main__.py  bm_call_simple.py  bm_chameleon.py  bm_chaos.py  bm_django.py  bm_elementtree.py  bm_fannkuch.py  bm_float.py  bm_go.py  bm_hexiom2.py  bm_html5lib.py  bm_logging.py  bm_nqueens.py  bm_pathlib.py  bm_pickle.py  bm_pidigits.py  bm_spambayes.py  bm_telco.py  bm_tornado_http.py  bm_unpack_sequence.py  cli.py  cli_run.py  compare.py  compile.py  requirements.txt  run.py  utils.py  venv.py
performance/benchmarks/: __init__.py  bm_2to3.py  bm_call_method.py  bm_call_method_slots.py  bm_call_method_unknown.py  bm_call_simple.py  bm_chameleon.py  bm_chaos.py  bm_crypto_pyaes.py  bm_deltablue.py  bm_django_template.py  bm_dulwich_log.py  bm_elementtree.py  bm_fannkuch.py  bm_float.py  bm_fractions.py  bm_genshi.py  bm_go.py  bm_hexiom.py  bm_hexiom2.py  bm_hg_startup.py  bm_html5lib.py  bm_json.py  bm_json_dump.py  bm_json_dump_v2.py  bm_json_dumps.py  bm_json_load.py  bm_json_loads.py  bm_json_v2.py  bm_logging.py  bm_mako.py  bm_mdp.py  bm_meteor_contest.py  bm_nbody.py  bm_nqueens.py  bm_pathlib.py  bm_pickle.py  bm_pidigits.py  bm_pyflate.py  bm_python_startup.py  (+21 more)
performance/benchmarks/pybench/: Calls.py  CommandLine.py  Constructs.py  Dict.py  Exceptions.py  Imports.py  Instances.py  Lists.py  Lookups.py  NewInstances.py  Numbers.py  README  Setup.py  Strings.py  Tuples.py  Unicode.py  With.py  clockres.py  pybench.py
performance/data/: spambayes_hammie.pkl
performance/pybench/: Arithmetic.py  Calls.py  Dict.py  Lists.py  NewInstances.py
performance/tests/: __init__.py  test_compare.py
performance/tests/data/: mem1.json  mem2.json  py2.json  py3.json  py3_performance03.json
pyperformance/: .gitignore  __init__.py  __main__.py  _benchmark.py  _benchmark_metadata.py  _benchmark_selections.py  _manifest.py  _pip.py  _pyproject_toml.py  _python.py  _pythoninfo.py  _utils.py  _uv.py  _venv.py  cli.py  cli_run.py  commands.py  compare.py  compile.py  requirements.in  requirements.txt  run.py  venv.py
pyperformance/_benchmarks/: MANIFEST  __init__.py  base.toml  bm_2to3.py  bm_pyston_aiohttp_requirements.txt  bm_pyston_djangocms_requirements.txt  bm_pyston_flaskblogging_requirements.txt  bm_pyston_gevent_bench_hu_requirements.txt  bm_pyston_gunicor_requirements.txt  bm_pyston_pytorch_alexnet_infer_requirements.txt  bm_raytrace.py
pyperformance/_benchmarks/bm_chameleon/: requirements.txt
pyperformance/_benchmarks/bm_django_template/: pyproject.toml
pyperformance/_benchmarks/bm_genshi/: pyproject.toml
pyperformance/_benchmarks/bm_go/: run_benchmark.py
pyperformance/_benchmarks/bm_mako/: pyproject.toml
pyperformance/_benchmarks/bm_pickle/: bm_pickle_list.toml  bm_pickle_pure_python.toml  bm_unpickle_list.toml
pyperformance/_benchmarks/bm_python_startup/: bm_python_startup_no_site.toml
pyperformance/_benchmarks/bm_regex_compile/: bm_regex_effbot.py
pyperformance/_benchmarks/bm_sqlalchemy_declarative/: pyproject.toml
pyperformance/_benchmarks/bm_sqlalchemy_imperative/: pyproject.toml
pyperformance/_utils/: __init__.py  _fs.py  _misc.py  _platform.py  _pyproject_toml.py  _pythoninfo.py
pyperformance/benchmark/: __init__.py  _benchmark.py  _metadata.py  _run.py  _spec.py
pyperformance/benchmarks/: __init__.py  _manifest.py  _parse.py  _selections.py  bm_azure_cli.py  bm_chameleon.py  bm_chaos.py  bm_django_template.py  bm_fannkuch.py  bm_hexiom.py  bm_hg_startup.py  bm_html5lib.py  bm_json_loads.py  bm_mako.py  bm_meteor_contest.py  bm_mypy_types.py  bm_nbody.py  bm_pickle.py  bm_pyflate.py  bm_read_instancevar_slots.py  bm_regex_generic.py  bm_regex_v8.py  bm_richards.py  bm_scimark.py  bm_spambayes.py  bm_spectral_norm.py  bm_sqlalchemy_declarative.py  bm_sqlalchemy_imperative.py  bm_sympy.py  bm_telco.py  bm_tornado_http.py  bm_xml_etree.py
pyperformance/benchmarks/data/: bm_mypy_target.py
pyperformance/data-files/: requirements.txt
pyperformance/data-files/benchmarks/: MANIFEST  base.toml
pyperformance/data-files/benchmarks/bm_2to3/: pyproject.toml  run_benchmark.py
pyperformance/data-files/benchmarks/bm_alloc/: pyproject.toml  run_benchmark.py
pyperformance/data-files/benchmarks/bm_argparse/: pyproject.toml  run_benchmark.py
pyperformance/data-files/benchmarks/bm_argparse_args/: pyproject.toml  run_benchmark.py
pyperformance/data-files/benchmarks/bm_async_tree/: pyproject.toml  (+10 more)
pyperformance/data-files/benchmarks/bm_typeshed_stats/typeshed-stats/: README.md  pyproject.toml
pyperformance/data-files/benchmarks/bm_typeshed_stats/typeshed-stats/src/typeshed_stats/: __init__.py  __main__.py  _cli.py  gather.py
pyperformance/requirements/: requirements.txt
pyperformance/tests/: __init__.py  __main__.py  test_commands.py  test_compare.py  test_compile.py  test_list.py  test_pyproject_toml.py  test_python.py  test_pythoninfo.py  test_run.py  test_run_order.py  test_show.py  test_user_defined_bm.py  test_venv.py
pyperformance/tests/data/: MANIFEST  find-pyperformance.py  py2.json  py3.json  py36.json  py38.json
pyperformance/tests/data/bm_local_wheel/: pyproject.toml  requirements.txt  run_benchmark.py  this_is-1.0.2-py2.py3-none-any.whl
scripts/: bench_cpython.py  bench_revisions.conf  bench_revisions.py
(+190 files in other folders)
